--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "pozitim/auth-client",
   "type": "library",
   "require": {
-    "guzzlehttp/guzzle": "6.2.2",
+    "guzzlehttp/guzzle": "*",
     "psr/log": "1.0.0"
   },
   "autoload": {
